# crispy

./: .gitignore  AUTHORS  ChangeLog  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py
crispy/: BGExp.py  Bedit.py  CRISPRData.py  CRISPRLibrary.py  CircularBinarySegmentation.py  CopyNumberCorrection.py  CrispyPlot.py  DataImporter.py  DimensionReduction.py  Enrichment.py  GIPlot.py  GuideDesign.py  GuideSelection.py  LMModels.py  LibRepresentationReport.py  Libraries.py  MOFA.py  QCPlot.py  Utils.py  __init__.py  abs_copynumber.py  association.py  benchmark_plot.py  biases_correction.py  crispy.py  crispy_test.py  data_correction.py  data_matrix.py  diff_ess.py  preprocess.py  qc_plot.py  ratio.py  sgrnas_pairwise_dist.py  sgrnas_pairwise_dist_bsub.py  ssgsea.py  utils.py
extdata/: association_example_data.csv
notebooks/: __init__.py
reports/: readme.txt
scripts/: HaCaTs_crispr.py  __init__.py  ccle_comparison.py  cnv_effect_var.py  comparison.py  correct_assemble.py  crispr_drug.py  crispr_drug_limma.R  gdsc_assemble.py  gdsc_correction.py  gdsc_correction_bsub.py  gdsc_correction_cnv.py  gdsc_correction_cnv_bsub.py  gdsc_correction_methy.py  gdsc_process.py  kernel_benchmark.py  kinases.py  lethalities.py  mmr_analysis.py  process_ccle.py  process_gdsc.py  samples_clustering.py  sampling_hyper.py  synthetic_lethal.py  synthetic_lethal_cnv.py  synthetic_lethal_gexp.py
src/: BAGEL-calc_foldchange.py  BAGEL_norm.py  __init__.py  assemble_mageck_fcs.py  crispy_fold_change.py  deseq_benchmark.py  fc_comparison.py  fold_change.py  shrna_corr.py  (+4 more)
(+324 files in other folders)
