[metadata]
name = crispy
author = Emanuel Goncalves
author-email = eg14@sanger.ac.uk
summary = Crispy - modelling CRISPR dropout data
license = BSD
description-file = README.rst
home-page = https://github.com/EmanuelGoncalves/crispy
requires-python = >=3.5
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis

[files]
packages =
    crispy